--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,7 +1,13 @@
+body{
+    font-family: 'Nanum Myeongjo', serif;
+}
+
+
 header {
     background-color: lightsteelblue;
     padding: 20px 0;
    border-bottom: 2px solid gray;
+    border-top: 10px solid #312c79;
 }
 
 .navbar {
@@ -19,7 +25,7 @@ header {
 }
 
 .navbar-nav .nav-link {
-    color: #000; /* Définissez la couleur du texte des éléments nav */
+    color: #e64331; /* Définissez la couleur du texte des éléments nav */
     transition: color 0.3s; /* Ajoute une transition douce lors du changement de couleur */
 }
 
@@ -43,6 +49,9 @@ header {
     background-color: #e0e0e0; /* Définissez la couleur d'arrière-plan lorsqu'ils sont actifs/clicked */
 }
 
+p, a, h1{
+    font-family: 'Nanum Myeongjo', serif;
+}
 footer{
     margin-top:50px;
     background-color:#312c79;
