--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -21,7 +21,7 @@ header {
 }
 
 .nav-item {
-    margin: 0 15px; /* ajoute un peu d'espace entre les liens de navigation */
+    margin: 0 5px; /* ajoute un peu d'espace entre les liens de navigation */
 }
 
 .navbar-nav .nav-link {
@@ -39,9 +39,10 @@ header {
 
 /* Si vous voulez changer l'arrière-plan des éléments nav au survol */
 .navbar-nav .nav-link:hover {
-    background-color: #312c79; /* Définissez la couleur d'arrière-plan au survol */
-    border-radius: 15px; /* Arrondit les coins */
-
+    /* Définissez la couleur d'arrière-plan au survol */
+    border-radius: 10px; /* Arrondit les coins */
+    height:40px;
+    background: linear-gradient(to bottom, rgba(49, 44, 121, 1) 0%, rgba(49, 44, 121, 0) 100%);
 }
 
 /* Si vous voulez appliquer un style aux éléments nav lorsqu'ils sont cliqués (actifs) */
@@ -66,3 +67,7 @@ footer{
         align-items: center;
     }
 }
+
+
+
+
