--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -40,7 +40,7 @@ header {
 /* Si vous voulez changer l'arrière-plan des éléments nav au survol */
 .navbar-nav .nav-link:hover {
     /* Définissez la couleur d'arrière-plan au survol */
-    border-radius: 10px; /* Arrondit les coins */
+    border-radius: 3px; /* Arrondit les coins */
     height:40px;
     background: linear-gradient(to bottom, rgba(49, 44, 121, 1) 0%, rgba(49, 44, 121, 0) 100%);
 }
@@ -61,6 +61,55 @@ footer{
     color:cornflowerblue;
     justify-content: center;
 }
+
+
+/************************BG Animation********************************/
+.bg {
+    animation:slide 3s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, #312c79 60%, #e64331 80%);
+    bottom:0;
+    left:-50%;
+    opacity:.5;
+    position:fixed;
+    right:-50%;
+    top:0;
+    z-index:-1;
+}
+
+.bg2 {
+    animation-direction:alternate-reverse;
+    animation-duration:4s;
+}
+
+.bg3 {
+    animation-duration:5s;
+}
+
+.content {
+    background-color:rgba(255,255,255,.8);
+    border-radius:.25em;
+    box-shadow:0 0 .25em rgba(0,0,0,.25);
+    box-sizing:border-box;
+    left:50%;
+    padding:10vmin;
+    position:fixed;
+    text-align:center;
+    top:50%;
+    transform:translate(-50%, -50%);
+}
+
+
+
+@keyframes slide {
+    0% {
+        transform:translateX(-25%);
+    }
+    100% {
+        transform:translateX(25%);
+    }
+}
+
+
 @media (max-width: 768px) {
     .navbar-nav {
         flex-direction: row;
